<resources>
    <string name="app_name">MailBox</string>
    <string name="mail_box">Mail Box</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_permission_required">Location Permission Required</string>
    <string name="dialog_title">Confirmation</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="ok_text">OK</string>
    <string name="icon">icon</string>

    <string name="domain">Domain</string>
    <string name="domain_name">sinaite.net</string>

    <string name="inbox_mail">Inbox</string>
    <string name="account">Account</string>
    <string name="create_account">Create Account</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <color name="editText_background">#F1F1F1</color>
    <string name="logout_confirmation_text">Are you want to logout?</string>

    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="error_field_required">Field Required</string>
    <string name="mailbox_login">MailBox Login</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="send">Send</string>
    <string name="to">To</string>
    <string name="text">Text</string>
    <string name="subject">Subject</string>
    <string name="active_account">Active Account</string>
    <string name="available_domain">Available Domain</string>
    <string name="contact_us">CONTACT US</string>
    <string name="about_us">ABOUT US</string>
    <string name="guest_user">GUEST_USER</string>
    <string name="send_mail">Send Mail</string>
    <string name="retrieves_the_collection_of_message_resources">Retrieves the collection of Message resources</string>
    <string name="note_source_data_not_supported">[Note: Source data fields are not supported!!]</string>
    <string name="source_https_api_mail_tm_domains">Source: https://api.mail.tm/domains</string>
    <string name="domain_name_will_changes_frequently_nplease_keep_an_eye_on_the_bottom_link">**Domain name will changes frequently!\nPlease keep an eye on the bottom link.</string>
    <string name="source_https_api_mail_tm_domains_id">Source: https://api.mail.tm/domains/{id}</string>
    <string name="xyz_sinaite_net">xyz@sinaite.net</string>
    <string name="hint_xyz_sinaite_net">hint: xyz@sinaite.net</string>
</resources>