<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semi_white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCloseDrawer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_standard_new"
                android:layout_marginTop="@dimen/spacing_standard"
                android:contentDescription="@string/icon"
                android:padding="@dimen/spacing_control"
                android:src="@drawable/ic_close_black" />

            <com.example.mailbox.utils.CircleImageView
                android:id="@+id/civProfile"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_profile"
                app:civ_border_color="@color/white"
                app:civ_border_width="@dimen/spacing_control" />

            <TextView
                android:id="@+id/txtDisplayAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:gravity="center_horizontal"
                android:text="@string/guest_user"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_size_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/stroke_width"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/spacing_standard"
                    android:background="@color/view_color" />

                <TextView
                    android:id="@+id/tvDomain"
                    style="@style/SidebarLabel.SidebarOption"
                    android:gravity="center_vertical"
                    android:text="@string/available_domain"
                    app:drawableStartCompat="@drawable/ic_home" />

                <TextView
                    android:id="@+id/tvAccCreate"
                    style="@style/SidebarLabel.SidebarOption"
                    android:gravity="center_vertical"
                    android:text="@string/create_account"
                    app:drawableStartCompat="@drawable/ic_create_account" />

                <TextView
                    android:id="@+id/tvSendMail"
                    style="@style/SidebarLabel.SidebarOption"
                    android:gravity="center_vertical"
                    android:text="@string/send_mail"
                    app:drawableStartCompat="@drawable/ic_send_mail" />

                <TextView
                    android:id="@+id/tvSettings"
                    style="@style/SidebarLabel.SidebarOption"
                    android:gravity="center_vertical"
                    android:text="@string/settings"
                    app:drawableStartCompat="@drawable/ic_settings" />

                <TextView
                    android:id="@+id/tvLogout"
                    style="@style/SidebarLabel.SidebarOption"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    app:drawableStartCompat="@drawable/ic_logout" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/stroke_width"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/spacing_standard_new"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/spacing_standard"
                    android:background="@color/view_color" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>