<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/no_internet_connection"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_solid_rounded"
                android:text="@string/try_again"
                android:padding="8dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/button_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:background="@drawable/button_solid_rounded"
                android:gravity="center"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/settings"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>