<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SignInFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <View
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp" />

            <LinearLayout
                android:id="@+id/customerPhoneLLy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topView"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mailbox_login"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/customerAddressLLy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customerPhoneLLy"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_7sdp">

                    <EditText
                        android:id="@+id/etLogEmail"
                        style="@style/TextInputEditTextStyle2"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:ignore="LabelFor" />

                    <TextView
                        style="@style/TextInputLayoutStyle2"
                        android:text="@string/email_address" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_7sdp">

                    <EditText
                        android:id="@+id/etLogPassword"
                        style="@style/TextInputEditTextStyle2"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        tools:ignore="LabelFor" />

                    <TextView
                        style="@style/TextInputLayoutStyle2"
                        android:text="@string/password" />
                </RelativeLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginAccBtn"
                    style="@style/Button_Style"
                    android:text="@string/login" />
            </LinearLayout>
        </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>