<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.CreateAccFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp" />

        <LinearLayout
            android:id="@+id/customerPhoneLLy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topView"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingTop="@dimen/_12sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/existDomain"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_xyz_sinaite_net"
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/customerAddressLLy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerPhoneLLy"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/TextInputEditTextStyle2"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />

                <TextView
                    style="@style/TextInputLayoutStyle2"
                    android:text="@string/email_address" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_7sdp">

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/TextInputEditTextStyle2"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    tools:ignore="LabelFor" />

                <TextView
                    style="@style/TextInputLayoutStyle2"
                    android:text="@string/password" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createAccBtn"
                style="@style/Button_Style"
                android:text="@string/create_account" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>